--- a/anonymous-feedback/src/index.css
+++ b/anonymous-feedback/src/index.css
@@ -7,6 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Use a media query to add a breakpoint at 800px: */
+@media screen and (max-width: 800px) {
+  .left, .main, .right { /* need to look if this is applicable or not */
+    width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
+  }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
