fix typo in index.css

--- a/anonymous-feedback/src/index.css
+++ b/anonymous-feedback/src/index.css
@@ -12,6 +12,7 @@ body {
   .left, .main, .right { /* need to look if this is applicable or not */
     width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
   }
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
